--- a/tematiche.html
+++ b/tematiche.html
@@ -12,10 +12,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <!-- MAIN SCSS IMPORT -->
-    <link rel="stylesheet" href="/raw_files/templates/psychology/main/main.css">
+    <link rel="stylesheet" href="./main/main.css">
 
     <!-- THEME IMPORT -->
-    <link rel="stylesheet" href="/raw_files/templates/psychology/theme/psychology.css">
+    <link rel="stylesheet" href="./theme/psychology.css">
 
     <!-- ANIMATION LIBRARY IMPORT -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
