--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aurora Belfanti, Psicologa a Trento</title>
+    <title>Dott.ssa Aurora Belfanti, Psicologa a Trento</title>
 
     <!-- BOOTSTRAP IMPORT -->
         <!-- CSS only -->
@@ -234,7 +234,7 @@
                             <img src="./assets/logo-squared.png" alt="logo">
                         </div> -->
                         <div class="hero-title">
-                            <h1>Aurora Belfanti</h1>
+                            <h1>Dott.ssa  Aurora Belfanti</h1>
                             <h4>Psicologa a Trento ed online.</h4>
                         </div>
                         <div class="hero-cta">
