--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 </div>
                 <!-- MENU FOOTER -->
                 <div class="modal-footer">
-                    <a href="#" data-bs-dismiss="modal" class="language">Italiano</a>
-                    <a href="#" data-bs-dismiss="modal" class="language">English</a>
+                    <a href="index.html" data-bs-dismiss="modal" class="language">Italiano</a>
+                    <a href="index-en.html" data-bs-dismiss="modal" class="language">English</a>
                 </div>
             </div>
         </div>
@@ -100,8 +100,8 @@
             <div class="modal-body">
                 <div class="d-flex justify-content-center mx-auto">
                     <div class="d-flex flex-column justify-content-center">
-                        <a href="#" data-bs-dismiss="modal" class="btn btn-outline"><div class="fi fi-it"></div> Italiano</a>
-                        <a href="#" data-bs-dismiss="modal" class="btn btn-outline"><span class="fi fi-gb"></span> English</a>
+                        <a href="index.html" data-bs-dismiss="modal" class="btn btn-outline"><div class="fi fi-it"></div> Italiano</a>
+                        <a href="index-en.html" data-bs-dismiss="modal" class="btn btn-outline"><span class="fi fi-gb"></span> English</a>
                     </div>
                 </div>
             </div>
