main fixes on text, added bg-urls to section images, added profile-pic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dott.ssa Aurora Belfanti, Psicologa a Trento</title>
+    <title>Dott.ssa Aurora Belfanti, Psicologa a Trento e online</title>
 
     <!-- BOOTSTRAP IMPORT -->
         <!-- CSS only -->
@@ -235,7 +235,7 @@
                         </div> -->
                         <div class="hero-title">
                             <h1>Dott.ssa  Aurora Belfanti</h1>
-                            <h4>Psicologa a Trento ed online.</h4>
+                            <h4>Psicologa a Trento e online.</h4>
                         </div>
                         <div class="hero-cta">
                             <a href="#intro" class="btn btn-primary">Scopri di piú</a>
@@ -251,17 +251,17 @@
         <div class="section-wrapper">
             <div class="section-content centered">
                 <div class="section-block1">
-                    <div class="chip-basic">Benvenuto, e benvenuta!</div>
+                    <!-- <div class="chip-basic">Benvenuto, e benvenuta!</div> -->
                     <h2 class="section-title">Consulenza psicologica</h2>
                     <p class="text-left">Ti é mai capitato di trovarti in una situazione difficile o dolorosa? Oppure di sentire il bisogno di un cambiamento ma di non riuscire ad identificare bene la direzione verso cui andare? É mai successo che ti chiedessi: Cosa voglio veramente? Come sto davvero?</p>
-                    <p class="text-left">Le domande che potrei aggiungere a questa lista sono molte, e certamente tutti noi prima o poi, in questo sentiero imprevedibile che é la vita, ci troviamo a porcele. A volte tra noi e noi, a volte con le persone a noi più care, e a volte potremmo sentire il bisogno o il desiderio di condividere queste domande o questi pezzetti di sentiero più complessi con uno psicologo, una persona esterna al nostro ambiente, che ci possa ascoltare senza pregiudizi e senza giudicarci.
+                    <p class="text-left">Le domande che potrei aggiungere a questa lista sono molte, e certamente tutti noi prima o poi, ci troviamo a porcele. A volte tra noi e noi, a volte con le persone a noi più care, e a volte potremmo sentire il bisogno o il desiderio di condividere queste domande o questi pezzetti di sentiero più complessi con uno psicologo, una persona esterna al nostro ambiente, che ci possa ascoltare senza pregiudizi e senza giudicarci.
                         <br>Uno spazio libero, aperto e sicuro.
                     </p>
                     <p class="text-left">Ecco, questo è quello che faccio nel mio lavoro: accompagnarti per un pezzetto di quel percorso sul quale stai camminando ed aiutarti a proseguire cercando di capire meglio cio’ che accade dentro e fuori.
                     </p>
                 </div>
                 <div class="section-block2">
-                    <a href="#contatti" class="btn btn-primary">Parliamone insieme</a>
+                    <a href="#contatti" class="btn btn-primary">Contattati</a>
                 </div>
             </div>
         </div>
@@ -279,7 +279,7 @@
 
 
      <!-- WHY PSYCHOLOGY -->
-     <section>
+     <section id="why">
         <div class="section-wrapper">
             <div class="section-content right">
                 <div class="section-block2">
@@ -314,6 +314,15 @@
                 <div class="grid-cards">
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
                         <div class="card-body">
+                            <i class='bx bxs-tired'></i>
+                            <h5 class="card-title">Stress, sonno, ansia</h5>
+                            <p class="card-text">Come stare meglio quando si soffre di ansia o attacchi di panico?
+                                Come migliorare il proprio sonno?</p>
+                            <a class="btn btn-primary-outline" href="tematiche.html#ansia-stress">Vai alla sezione</a>
+                        </div>
+                    </div>
+                    <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
+                        <div class="card-body">
                             <i class='bx bxs-donate-heart' ></i>
                             <h5 class="card-title">Relazioni e comunicazione</h5>
                             <p class="card-text">Imparare a stare nelle relazioni e a comunicare in modo diverso</p>
@@ -346,15 +355,6 @@
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
                         <div class="card-body">
-                            <i class='bx bxs-tired'></i>
-                            <h5 class="card-title">Stress, sonno, ansia</h5>
-                            <p class="card-text">Come stare meglio quando si soffre di ansia o attacchi di panico?
-                                Come migliorare il proprio sonno?</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#ansia-stress">Vai alla sezione</a>
-                        </div>
-                    </div>
-                    <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
-                        <div class="card-body">
                             <i class='bx bxs-brain'></i>
                             <h5 class="card-title">Pensieri ingombranti</h5>
                             <p class="card-text">Pensieri ricorrenti, difficili da gestire o da condividere con altre persone.</p>
@@ -374,7 +374,7 @@
                             <i class='bx bxs-book-reader' ></i>
                             <h5 class="card-title">Università e Scuola</h5>
                             <p class="card-text">Metodo di studio, procrastinazione, motivazione, orientamento, ansia e stress.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#scuola">Vai alla sezione</a>
+                            <a class="btn btn-primary-outline" href="tematiche.html#studio">Vai alla sezione</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -414,13 +414,13 @@
                 <div class="section-block1">
                     <div class="chip-secondary">Chi sono</div>
                     <div class="profile-img">
-                        <img src="http://www.catp.be/Files/Image/Presentation%20Therapeutes/Belfanti_Psychologist.jpg" alt="profile-pic">
+                        <img src="/assets/profile-pic.jpg" alt="profile-pic">
                     </div>
                     <h2 class="section-title">Qualcosa su di me</h2>
-                    <p class="text-left">Sono psicologa e psicoterapeuta in formazione presso l’Institute of Constructivist Psychology di Padova.
+                    <p class="text-left">Sono psicologa e psicoterapeuta in formazione presso <a href="https://www.icp-italia.it/it">l’Institute of Constructivist Psychology di Padova</a>.
                         Dopo poco più di una decade vissuta fuori dalla mia città natale, sono ritornata a Trento, dove svolgo la professione di psicologa, offrendo consulenze individuali e di coppia in studio ed online.
                     </p>
-                    <p class="text-left">Prima di tornare tra le mie amate montagne, ho lavorato per alcuni anni alla Vrije Universiteit Brussel (VUB) come psicologa, offrendo supporto psicologico a studenti e ricercatori. 
+                    <p class="text-left">Prima di tornare tra le mie amate montagne, ho lavorato per alcuni anni alla <a href="https://www.vub.be/en">Vrije Universiteit Brussel (VUB)</a> come psicologa, offrendo supporto psicologico a studenti e ricercatori. 
                         E’ sicuramente stata un’esperienza arricchente: occupandomi della comunità internazionale ho avuto occasione di incontrare e offrire consulenza psicologica a persone provenienti da tutto il mondo. Oltre che occuparmi di percorsi di supporto individuale, sono stata trainer di diversi percorsi di gruppo, tra cui training basati sulla Mindfulness e Self-Compassion e sull’ ACT (Acceptance and Commitment Therapy), e training mirati ad affrontare la paura del fallimento e le situazioni di blocco.
                     </p>
                     <p class="text-left">
@@ -428,8 +428,9 @@
                         Nel periodo di tirocinio post-lauream mi sono formata presso il Centro Adozioni di Padova (ULSS6) e successivamente a Vienna, presso l’associazione di psicoterapia Ediveria.
                     </p>
                     <p class="text-left">
-                        Attualmente collaboro con studi associati di psicologi a Trento e online con il <a href="http://www.catp.be/">CATP</a> (Centre d'Accompagnement Thérapeutique Pluridisciplinaire - Bruxelles).
+                        Attualmente collaboro con studi associati di psicologi a Trento e online con il <a href="http://www.catp.be/">Centre d'Accompagnement Thérapeutique Pluridisciplinaire - Bruxelles  (CATP) </a>.
                     </p>
+                    <p class="text-left">Se vuoi sapere di piú sulla mia formazione, <a href="https://www.linkedin.com/in/aurora-belfanti-186b0a162/">qui</a> trovi il mio profilo LinkedIn.</p>
                 </div>
                 <!-- <div class="section-block2">
                     <a href="#" class="btn btn-primary">Lascia una recensione</a>
@@ -660,7 +661,7 @@
                         </h2>
                         <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                           <div class="accordion-body">
-                              <p>Per prenotare una seduta o pormi altre domande non esitare a contattarmi alla email <a href="mailto:aurora.belfanti.psy@gmail.com">email</a>
+                              <p>Per prenotare una seduta o pormi altre domande non esitare a contattarmi alla <a href="mailto:aurora.belfanti.psy@gmail.com">email</a>
                             </p>
                           </div>
                         </div>
@@ -680,8 +681,8 @@
                         <div class="banner-content">
                             <div class="left">
                                 <!-- <h3>Cadiamo solo per imparare a rialzarci.</h3> -->
-                                <p>"Ciò che ci spaventa e ci sgomenta davvero non sono gli eventi esterni in sé, ma il modo in cui li pensiamo. Non sono le cose a turbarci, ma la nostra interpretazione del loro significato" (Epitteto).</p>
-                                <a href="#contatti" class="btn btn-primary" >Contattami</a>
+                                <p>"Non giudicare sbagliato ciò che non conosci, prendi l’occasione per comprendere." (Pablo Picasso).</p>
+                                <!-- <a href="#contatti" class="btn btn-primary" >Contattami</a> -->
                             </div>
                         </div>
                     </div>
