--- a/tematiche.html
+++ b/tematiche.html
@@ -280,6 +280,15 @@
             <div class="grid-cards">
                 <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
                     <div class="card-body">
+                        <i class='bx bxs-tired'></i>
+                        <h5 class="card-title">Stress, sonno, ansia</h5>
+                        <p class="card-text">Come stare meglio quando si soffre di ansia o attacchi di panico?
+                            Come migliorare il proprio sonno?</p>
+                        <a class="btn btn-primary-outline" href="#ansia-stress">Vai alla sezione</a>
+                    </div>
+                </div>
+                <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
+                    <div class="card-body">
                         <i class='bx bxs-donate-heart' ></i>
                         <h5 class="card-title">Relazioni e comunicazione</h5>
                         <p class="card-text">Imparare a stare nelle relazioni e a comunicare in modo diverso</p>
@@ -312,15 +321,6 @@
                 </div>
                 <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
                     <div class="card-body">
-                        <i class='bx bxs-tired'></i>
-                        <h5 class="card-title">Stress, sonno, ansia</h5>
-                        <p class="card-text">Come stare meglio quando si soffre di ansia o attacchi di panico?
-                            Come migliorare il proprio sonno?</p>
-                        <a class="btn btn-primary-outline" href="#ansia-stress">Vai alla sezione</a>
-                    </div>
-                </div>
-                <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
-                    <div class="card-body">
                         <i class='bx bxs-brain'></i>
                         <h5 class="card-title">Pensieri ingombranti</h5>
                         <p class="card-text">Pensieri ricorrenti, difficili da gestire o da condividere con altre persone.</p>
@@ -340,7 +340,7 @@
                         <i class='bx bxs-book-reader' ></i>
                         <h5 class="card-title">Università e Scuola</h5>
                         <p class="card-text">Metodo di studio, procrastinazione, motivazione, orientamento, ansia e stress.</p>
-                        <a class="btn btn-primary-outline" href="#scuola">Vai alla sezione</a>
+                        <a class="btn btn-primary-outline" href="#studio">Vai alla sezione</a>
                     </div>
                 </div>
                 <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -361,6 +361,51 @@
         </div>
     </section>
 
+    <!-- ANSIA, STRESS, SONNO -->
+    <section id="ansia-stress">
+        <div class="section-wrapper">
+            <div class="section-content left">
+                <div class="section-block1">
+                    <div class="chip-secondary"><i class='bx bxs-tired'></i> Stress, sonno, ansia</div>
+                    <h2 class="section-title">Ansia, Stress, Problemi del sonno, Attacchi di panico</h2>
+                    <p>
+                        Lo stress è una reazione naturale del nostro corpo-mente che diventa problematica quando si cronicizza o quando arriva ad avere una così forte intensità da diventare fonte di disagio per la nostra vita quotidiana.
+                        Vuoi qualche informazione in più? Clicca sulle infografiche qui sotto!
+                    </p>
+                    <p>
+                        Il Sonno. In questa infografica qui sotto troverai delle regole base per promuovere una buona igiene del sonno e per capire cosa potresti cambiare nelle tue abitudini.
+                    </p>
+                    <p>
+                        Lo stress. Come reagisce il nostro corpo allo stress? Qui puoi trovare una spiegazione di alcuni effetti corporei e un esercizio di respirazione che può aiutarti in momenti di stress o ansia.
+                    </p>
+                </div>
+                <div class="section-block2">
+                    <div class="img"></div>
+                </div>
+            </div>
+            <div class="grid-cards">
+                <div class="card centered card-icon-text">
+                    <div class="card-body">
+                        <h5 class="card-title">Il sonno</h5>
+                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
+                    </div>
+                </div>
+                <div class="card centered card-icon-text">
+                    <div class="card-body">
+                        <h5 class="card-title">Lo stress ed il mio corpo</h5>
+                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
+                    </div>
+                </div>
+                <div class="card centered card-icon-text">
+                    <div class="card-body">
+                        <h5 class="card-title">Respirazione addominale</h5>
+                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- RELAZIONI -->
     <section id="relazioni">
         <div class="section-wrapper">
@@ -374,6 +419,8 @@
                 <div class="section-block2">
                     <div class="img"></div>
                 </div>
+            </div>
+            <div class="section-content">
                 <div class="grid-cards">
                     <div class="card centered card-icon-text">
                         <div class="card-body">
@@ -509,55 +556,12 @@
                     <p>
                         Nella media, il lavoro occupa un terzo della nostra giornata. Sentirsi bene nel proprio spazio lavorativo è fondamentale per il nostro benessere così come trovare un percorso lavorativo che soddisfi i nostri bisogni e sia adatto a noi.
 
-                        Se il lavoro ti sta causando uno stato di stress cronico, stanchezza e ha un impatto significativo sul tuo umore, parlare con un professionista per ritrovare il tuo equilibrio può essere un passo fondamentale. Non si parla molto di burnout in Italia, tuttavia è uno stato di sofferenza che è importante riconoscere per prendersi cura di sè
+                        Se il lavoro ti sta causando uno stato di stress cronico, stanchezza e ha un impatto significativo sul tuo umore, parlare con un professionista per ritrovare il tuo equilibrio può essere un passo fondamentale. Non si parla molto di burnout in Italia, tuttavia è uno stato di sofferenza che è importante riconoscere per prendersi cura di sè.
 
                     </p>
                 </div>
                 <div class="section-block2">
                     <div class="img"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- ANSIA, STRESS, SONNO -->
-    <section id="ansia-stress">
-        <div class="section-wrapper">
-            <div class="section-content left">
-                <div class="section-block1">
-                    <div class="chip-secondary"><i class='bx bxs-tired'></i> Stress, sonno, ansia</div>
-                    <h2 class="section-title">Ansia, Stress, Problemi del sonno, attacchi di panico</h2>
-                    <p>Lo stress è una reazione naturale del nostro corpo-mente che diventa problematica quando si cronicizza o quando arriva ad avere una così forte intensità da diventare fonte di disagio per la nostra vita quotidiana.
-
-                        Il Sonno.
-                        In questa infografica troverai delle regole base per promuovere una buona igiene del sonno e per capire cosa potresti cambiare nelle tue abitudini (infographic sonno)
-                        
-                        Lo stress.
-                        Come reagisce il nostro corpo allo stress? Qui puoi trovare una spiegazione di alcuni effetti corporei e un esercizio di respirazione che può aiutarti in momenti di stress o ansia.
-                        </p>
-                </div>
-                <div class="section-block2">
-                    <div class="img"></div>
-                </div>
-            </div>
-            <div class="grid-cards">
-                <div class="card centered card-icon-text">
-                    <div class="card-body">
-                        <h5 class="card-title">Il sonno</h5>
-                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
-                    </div>
-                </div>
-                <div class="card centered card-icon-text">
-                    <div class="card-body">
-                        <h5 class="card-title">Lo stress ed il mio corpo</h5>
-                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
-                    </div>
-                </div>
-                <div class="card centered card-icon-text">
-                    <div class="card-body">
-                        <h5 class="card-title">Respirazione addominale</h5>
-                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
-                    </div>
                 </div>
             </div>
         </div>
@@ -652,7 +656,7 @@
 
                         Sei all’estero e vorresti iniziare un percorso di consulenza psicologica online? Contattami attraverso il form o via email.
 
-                        Abiti in Trentino e vuoi un appuntamento in studio? Contattami attraverso il form o via email.
+                        Abiti in Trentino e vuoi un appuntamento in studio? Contattami via <a href="index.html#contatti">email</a>.
 
                     </p>
                 </div>
