fixed mini issue on picture

--- a/tematiche.html
+++ b/tematiche.html
@@ -409,7 +409,7 @@
     <!-- RELAZIONI -->
     <section id="relazioni">
         <div class="section-wrapper">
-            <div class="section-content">
+            <div class="section-content left">
                 <div class="section-block1">
                     <div class="chip-secondary"><i class='bx bxs-donate-heart' ></i> Relazioni e comunicazione</div>
                     <h2 class="section-title">Relazioni e comunicazione</h2>
