--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </p>
                 </div>
                 <div class="section-block2">
-                    <a href="#contatti" class="btn btn-primary">Contattati</a>
+                    <a href="#contatti" class="btn btn-primary">Contattami</a>
                 </div>
             </div>
         </div>
