--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <!-- <div class="chip-basic">Benvenuto, e benvenuta!</div> -->
                     <h2 class="section-title">Consulenza psicologica</h2>
                     <p class="text-left">Ti é mai capitato di trovarti in una situazione difficile o dolorosa? Oppure di sentire il bisogno di un cambiamento ma di non riuscire ad identificare bene la direzione verso cui andare? É mai successo che ti chiedessi: Cosa voglio veramente? Come sto davvero?</p>
-                    <p class="text-left">Le domande che potrei aggiungere a questa lista sono molte, e certamente tutti noi prima o poi, ci troviamo a porcele. A volte tra noi e noi, a volte con le persone a noi più care, e a volte potremmo sentire il bisogno o il desiderio di condividere queste domande o questi pezzetti di sentiero più complessi con uno psicologo, una persona esterna al nostro ambiente, che ci possa ascoltare senza pregiudizi e senza giudicarci.
+                    <p class="text-left">Le domande che potrei aggiungere a questa lista sono molte, e certamente, tutti noi prima o poi, ci troviamo a porcele. A volte potremmo sentire il bisogno o il desiderio di condividere queste domande o questi pezzetti di sentiero più complessi con uno psicologo, una persona esterna al nostro ambiente, che ci possa ascoltare senza pregiudizi e senza giudicarci.
                         <br>Uno spazio libero, aperto e sicuro.
                     </p>
                     <p class="text-left">Ecco, questo è quello che faccio nel mio lavoro: accompagnarti per un pezzetto di quel percorso sul quale stai camminando ed aiutarti a proseguire cercando di capire meglio cio’ che accade dentro e fuori.
