--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                 </div>
                 <div class="section-block2">
                     <a href="#contatti" class="btn btn-primary">Contattami</a>
+
                 </div>
             </div>
         </div>
@@ -390,7 +391,7 @@
             <div class="section-content centered">
                 <div class="section-block1">
                     <p>Se hai altre domande o tematiche che vorresti affrontare e che non trovi nell'elenco, contattami!.</p>
-                    <a href="#" class="btn btn-primary">Contattami</a>
+                    <a href="#contatti" class="btn btn-primary">Contattami</a>
                 </div>
             </div>
         </div>
