--- a/tematiche.html
+++ b/tematiche.html
@@ -89,21 +89,102 @@
         </div>
     </div>
 
-    <!-- MODAL INFOGRAPHIC -->
-    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-modal" tabindex="-1">
+
+    <!-- MODAL INFOGRAPHIC SONNO -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-sonno" tabindex="-1">
 		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h1 class="modal-title fs-5" id="infographic-modal-title">Infografica</h1>
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Il sonno</h1>
 					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
                         <i class='bx bx-x'></i>
                     </button>
 				</div>
 				<div class="modal-body">
-					<iframe src="/raw_files/templates/psychology/assets/infographics/sonno.pdf" style="width: 100%;"></iframe>
+					<iframe src="/assets/infographics/sonno.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+				</div>
+			</div>
+		</div>
+    </div>
+
+    <!-- MODAL INFOGRAPHIC RESPIRO -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-respiro" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Respirazione addominale</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/respiro.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+				</div>
+			</div>
+		</div>
+    </div>
+
+    <!-- MODAL INFOGRAPHIC ORIENTAMENTO -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-orientamento" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Orientamento scolastico</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/orientamento.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+				</div>
+			</div>
+		</div>
+    </div>
+
+    <!-- MODAL INFOGRAPHIC OBIETTIVI -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-obiettivi" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Obiettivi e smart goals</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/obiettivi.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+				</div>
+			</div>
+		</div>
+    </div>
+
+    <!-- MODAL INFOGRAPHIC STRESS -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-stress" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Lo stress e il mio corpo</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/stress.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button>
 				</div>
 			</div>
 		</div>
@@ -387,19 +468,19 @@
                 <div class="card centered card-icon-text">
                     <div class="card-body">
                         <h5 class="card-title">Il sonno</h5>
-                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
+                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-sonno">infografica</button>
                     </div>
                 </div>
                 <div class="card centered card-icon-text">
                     <div class="card-body">
                         <h5 class="card-title">Lo stress ed il mio corpo</h5>
-                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
+                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-stress">infografica</button>
                     </div>
                 </div>
                 <div class="card centered card-icon-text">
                     <div class="card-body">
                         <h5 class="card-title">Respirazione addominale</h5>
-                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">infografica</button>
+                        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-respiro">infografica</button>
                     </div>
                 </div>
             </div>
@@ -634,8 +715,8 @@
             </div>
             <div class="section-content centered">
                 <div class="section-block1 d-flex flex-row">
-                    <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-modal">Smart goals</button>
-                    <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-modal">Orientamento</button>
+                    <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-obiettivi">Smart goals</button>
+                    <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-orientamento">Orientamento</button>
                 </div>
             </div>
         </div>
