fixes on lauguage modal urls and added english content on index-en.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="d-flex justify-content-center mx-auto">
                     <div class="d-flex flex-column justify-content-center">
                         <a href="index.html" data-bs-dismiss="modal" class="btn btn-outline"><div class="fi fi-it"></div> Italiano</a>
-                        <a href="index-en.html" data-bs-dismiss="modal" class="btn btn-outline"><span class="fi fi-gb"></span> English</a>
+                        <a href="index-en.html" class="btn btn-outline"><span class="fi fi-gb"></span> English</a>
                     </div>
                 </div>
             </div>
