--- a/tematiche.html
+++ b/tematiche.html
@@ -83,7 +83,7 @@
                 <!-- MENU FOOTER -->
                 <div class="modal-footer">
                     <a href="tematiche.html" data-bs-dismiss="modal" class="language">Italiano</a>
-                    <a href="tematiche-en.html" data-bs-dismiss="modal" class="language">English</a>
+                    <a href="tematiche-en.html" class="language">English</a>
                 </div>
             </div>
         </div>
@@ -202,7 +202,7 @@
                 <div class="d-flex justify-content-center mx-auto">
                     <div class="d-flex flex-column justify-content-center">
                         <a href="tematiche.html" data-bs-dismiss="modal" class="btn btn-outline"><div class="fi fi-it"></div> Italiano</a>
-                        <a href="tematiche-en.html" data-bs-dismiss="modal" class="btn btn-outline"><span class="fi fi-gb"></span> English</a>
+                        <a href="tematiche-en.html" class="btn btn-outline"><span class="fi fi-gb"></span> English</a>
                     </div>
                 </div>
             </div>
